Home icon edited

--- a/templates/base_banner.html
+++ b/templates/base_banner.html
@@ -1,12 +1,12 @@
 {% extends 'base.html' %}
 {% load static %}
 
-{% block top %}
+{% block banner %}
 <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-dark border-bottom box-shadow">
     <h5 class="my-0 mr-md-auto font-weight-normal text-light">
       <!-- <a class="text-light" href="{% url 'home' %}">The Carpentries Memberships</a> -->
       <a href="{% url 'home' %}">
-        <span class="fas fa-home"> </span>
+        <i class="fa fa-home"> </i>
         <a class="text-light">The Carpentries Memberships</a>
       </a>
     </h5>
