--- a/templates/contact_list.html
+++ b/templates/contact_list.html
@@ -4,10 +4,9 @@
 
 {% block title %}Contacts{% endblock %}
 
-{% block breadcrumb %}
-  <ol class="breadcrumb my-1">
-    <h1 class="breadcrumb-item active">Contacts</h1>
-  </ol>
+{% block panel %}
+    <h1>Contacts</h1>
+    <br>
 {% endblock %}
 
 {% block content %}
