--- a/templates/membership_list.html
+++ b/templates/membership_list.html
@@ -3,10 +3,9 @@
 
 {% block title %}Memberships{% endblock %}
 
-{% block breadcrumb %}   
-<ol class="breadcrumb my-1">
-    <h1 class="breadcrumb-item active">Memberships</h1>
-  </ol>
+{% block panel %}
+    <h1>Memberships</h1>
+    <br>
 {% endblock %}
 
 {% block content %}
