--- a/templates/organization_list.html
+++ b/templates/organization_list.html
@@ -3,10 +3,9 @@
 
 {% block title %}Organizations{% endblock %}
 
-{% block breadcrumb %}
-<ol class="breadcrumb my-1">
-  <h1 class="breadcrumb-item active">Organizations</h1>
-</ol>
+{% block panel %}
+    <h1>Organizations</h1>
+    <br>
 {% endblock %}
 
 {% block content %}
