--- a/templates/term_list.html
+++ b/templates/term_list.html
@@ -3,10 +3,9 @@
 
 {% block title %}Terms{% endblock %}
 
-{% block breadcrumb %}
-      <ol class="breadcrumb my-1">
-        <h1 class="breadcrumb-item active">Terms</h1>
-      </ol>
+{% block panel %}
+    <h1>Terms</h1>
+    <br>
 {% endblock %}
 
 {% block content %}
