Href added in landing page

--- a/templates/landing.html
+++ b/templates/landing.html
@@ -4,7 +4,7 @@
 {% block content %}
 
   <div class="jumbotron text-center">
-      <button width=50 height=10 bgcolor=red color=white>Sign in</button>
+      <button width=50 height=10 bgcolor=red color=white href="{% url 'login' %}">Sign in</button>
   </div>
 
 {% endblock %}
