Banner correction in note list

--- a/templates/note_list.html
+++ b/templates/note_list.html
@@ -3,10 +3,9 @@
 
 {% block title %}Notes{% endblock %}
 
-{% block breadcrumb %}
-      <ol class="breadcrumb my-1">
-        <h1 class="breadcrumb-item active">Notes</h1>
-      </ol>
+{% block panel %}
+    <h1>Notes</h1>
+    <br>
 {% endblock %}
 
 {% block content %}
