Paginator added to organizations list

--- a/templates/organization_list.html
+++ b/templates/organization_list.html
@@ -39,5 +39,28 @@
         </p>
       </tbody>
     </table>
+
+    {% if organizations.has_other_pages %}
+    <ul class="pagination">
+      {% if organizations.has_previous %}
+        <li><a href="?page={{ organizations.previous_page_number }}">&laquo;</a></li>
+      {% else %}
+        <li class="disabled"><span>&laquo;</span></li>
+      {% endif %}
+      {% for i in organizations.paginator.page_range %}
+        {% if organizations.number == i %}
+          <li class="active"><span>{{ i }} <span class="sr-only">(current)</span></span></li>
+        {% else %}
+          <li><a href="?page={{ i }}">{{ i }}</a></li>
+        {% endif %}
+      {% endfor %}
+      {% if organizations.has_next %}
+        <li><a href="?page={{ organizations.next_page_number }}">&raquo;</a></li>
+      {% else %}
+        <li class="disabled"><span>&raquo;</span></li>
+      {% endif %}
+    </ul>
+  {% endif %}
+
   </div>
 {% endblock %}
