--- a/templates/membership_list.html
+++ b/templates/membership_list.html
@@ -35,6 +35,29 @@
         </p>
       </tbody>
     </table>
+
+    {% if memberships.has_other_pages %}
+    <ul class="pagination">
+      {% if memberships.has_previous %}
+        <li><a href="?page={{ memberships.previous_page_number }}">&laquo;</a></li>
+      {% else %}
+        <li class="disabled"><span>&laquo;</span></li>
+      {% endif %}
+      {% for i in memberships.paginator.page_range %}
+        {% if memberships.number == i %}
+          <li class="active"><span>{{ i }} <span class="sr-only">(current)</span></span></li>
+        {% else %}
+          <li><a href="?page={{ i }}">{{ i }}</a></li>
+        {% endif %}
+      {% endfor %}
+      {% if memberships.has_next %}
+        <li><a href="?page={{ memberships.next_page_number }}">&raquo;</a></li>
+      {% else %}
+        <li class="disabled"><span>&raquo;</span></li>
+      {% endif %}
+    </ul>
+  {% endif %}
+
   </div>
 
 {% endblock %}
