Paginator added to contacts list

--- a/templates/contact_list.html
+++ b/templates/contact_list.html
@@ -44,5 +44,28 @@
         </p>
       </tbody>
     </table>
+
+    {% if contacts.has_other_pages %}
+    <ul class="pagination">
+      {% if contacts.has_previous %}
+        <li><a href="?page={{ contacts.previous_page_number }}">&laquo;</a></li>
+      {% else %}
+        <li class="disabled"><span>&laquo;</span></li>
+      {% endif %}
+      {% for i in contacts.paginator.page_range %}
+        {% if contacts.number == i %}
+          <li class="active"><span>{{ i }} <span class="sr-only">(current)</span></span></li>
+        {% else %}
+          <li><a href="?page={{ i }}">{{ i }}</a></li>
+        {% endif %}
+      {% endfor %}
+      {% if contacts.has_next %}
+        <li><a href="?page={{ contacts.next_page_number }}">&raquo;</a></li>
+      {% else %}
+        <li class="disabled"><span>&raquo;</span></li>
+      {% endif %}
+    </ul>
+  {% endif %}
+
   </div>
 {% endblock %}
