Paginator added to terms list

--- a/templates/term_list.html
+++ b/templates/term_list.html
@@ -31,6 +31,29 @@
         </p>
       </tbody>
     </table>
+
+    {% if terms.has_other_pages %}
+    <ul class="pagination">
+      {% if terms.has_previous %}
+        <li><a href="?page={{ terms.previous_page_number }}">&laquo;</a></li>
+      {% else %}
+        <li class="disabled"><span>&laquo;</span></li>
+      {% endif %}
+      {% for i in terms.paginator.page_range %}
+        {% if terms.number == i %}
+          <li class="active"><span>{{ i }} <span class="sr-only">(current)</span></span></li>
+        {% else %}
+          <li><a href="?page={{ i }}">{{ i }}</a></li>
+        {% endif %}
+      {% endfor %}
+      {% if terms.has_next %}
+        <li><a href="?page={{ terms.next_page_number }}">&raquo;</a></li>
+      {% else %}
+        <li class="disabled"><span>&raquo;</span></li>
+      {% endif %}
+    </ul>
+  {% endif %}
+
   </div>
 
 {% endblock %}
