Numbered items found in DB tables shown in home panels

--- a/templates/home.html
+++ b/templates/home.html
@@ -19,7 +19,7 @@
                         <div class="card-body">
                             <h1 class="card-title pricing-card-title"></h1>
                             <ul class="list-unstyled mt-3 mb-4">
-                            <li></li>
+                            <li>{{ organizations }} organizations</li>
                             </ul>
                             <button type="button" class="btn btn-outline-primary" onclick="location.href='{% url 'organization_list' %}'">List       
                             </button> <br><br>
@@ -36,7 +36,7 @@
                         <div class="card-body">
                             <h1 class="card-title pricing-card-title"></h1>
                             <ul class="list-unstyled mt-3 mb-4">
-                            <li></li>
+                            <li>{{ memberships }} memberships</li>
                             </ul>
                             <button type="button" class="btn btn-outline-primary" onclick="location.href='{% url 'membership_list' %}'">List
                             </button><br><br>
@@ -53,7 +53,7 @@
                         <div class="card-body">
                             <h1 class="card-title pricing-card-title"></h1>
                             <ul class="list-unstyled mt-3 mb-4">
-                            <li></li>
+                            <li>{{ contacts }} contacts</li>
                             </ul>
                             <button type="button" class="btn btn-outline-primary" onclick="location.href='{% url 'contact_list' %}'">List</button>
                             <br><br>
@@ -72,7 +72,7 @@
                         <div class="card-body">
                             <h1 class="card-title pricing-card-title"></h1>
                             <ul class="list-unstyled mt-3 mb-4">
-                            <li></li>
+                            <li>{{ terms }} terms</li>
                             </ul>
                             <button type="button" class="btn btn-outline-primary" onclick="location.href='{% url 'term_list' %}'">List</button>
                             <br><br>
@@ -89,7 +89,7 @@
                         <div class="card-body">
                             <h1 class="card-title pricing-card-title"></h1>
                             <ul class="list-unstyled mt-3 mb-4">
-                            <li></li>
+                            <li>{{ notes }} notes</li>
                             </ul>
                             <button type="button" class="btn btn-outline-primary" onclick="location.href='{% url 'note_list' %}'">List</button>
                             <br><br>
