Reponsive grid correction

--- a/templates/base.html
+++ b/templates/base.html
@@ -19,12 +19,12 @@
     {% endblock %}
 
     <div class="container">
-      <div class="jumbotron panel panel-default"> 
-        <div class="row">
-            <div class="col-2">
+      <div class="jumbotron"> 
+        <div class="row text-center vertical-center">
+            <div class="col-sm-2">
             <img src="/static/carpentries-mdb-hex-white.png" height="150px">
             </div>
-            <div class="col-10">
+            <div class="col-sm-10">
             {% block panel %}
             {% endblock %}
             </div>
@@ -43,7 +43,7 @@
         <footer id="footer-content">
             <div id="footer">
                 <div class="row">
-                    <div class="col-6">
+                    <div class="col-sm-6">
                         <h5 class="shadow-black">About The Carpentries</h5>
                         <p class="shadow-black"> The Carpentries is a fiscally sponsored project of
                             <a href='http://communityin.org/'>Community Initiatives</a>, a registered 501(c)3 non-profit organisation based in California,
@@ -51,7 +51,7 @@
                             researchers in academia, industry and government.
                             <a href="https://carpentries.org/about/">More ›</a>
                     </div>
-                    <div class="col-3">
+                    <div class="col-sm-3">
                         <h5 class="shadow-black">Services</h5>
                         <ul class="no-bullet shadow-black">
                             <li>
@@ -64,7 +64,7 @@
                                             <a href="https://carpentries.org/sitemap.xml" title="Sitemap for Google Webmaster Tools">sitemap.xml</a>
                         </ul>
                     </div>
-                    <div class="col-3">
+                    <div class="col-sm-3">
                         <h5 class="shadow-black">Links</h5>
                         <ul class="no-bullet shadow-black">
                             <li>
