Responsive panel correction

--- a/templates/home.html
+++ b/templates/home.html
@@ -11,7 +11,7 @@
 
         <div class="container">
             <div class="row">
-                <div class="col">
+                <div class="col-sm">
                     <div class="card mb-4 box-shadow text-center">
                         <div class="card-header">
                             <h4 class="my-0 font-weight-normal">ORGANIZATIONS</h4>
@@ -28,7 +28,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col">
+                <div class="col-sm">
                     <div class="card mb-4 box-shadow text-center">
                         <div class="card-header">
                             <h4 class="my-0 font-weight-normal">MEMBERSHIPS</h4>
@@ -45,7 +45,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col">
+                <div class="col-sm">
                     <div class="card mb-4 box-shadow text-center">
                         <div class="card-header">
                             <h4 class="my-0 font-weight-normal">CONTACTS</h4>
@@ -64,7 +64,7 @@
                 </div>
             </div>
             <div class="row justify-content-center">
-                <div class="col-4">
+                <div class="col-sm-4">
                     <div class="card mb-4 box-shadow text-center">
                         <div class="card-header">
                             <h4 class="my-0 font-weight-normal">TERMS</h4>
@@ -81,7 +81,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-4">
+                <div class="col-sm-4">
                     <div class="card mb-4 box-shadow text-center">
                         <div class="card-header">
                             <h4 class="my-0 font-weight-normal">NOTES</h4>
