--- a/templates/base.html
+++ b/templates/base.html
@@ -18,13 +18,15 @@
     {% block banner %}
     {% endblock %}
 
-    <div class="container">
+    <div class="container-fluid">
       <div class="jumbotron"> 
-        <div class="row text-center vertical-center">
-            <div class="col-sm-2">
+        <div class="row">
+            <div class="col-sm-6" align="right">
             <img src="/static/carpentries-mdb-hex-white.png" height="150px">
             </div>
-            <div class="col-sm-10">
+            <div class="col-sm-6">
+                <br>
+                <br>
             {% block panel %}
             {% endblock %}
             </div>
