Correction to the planel block instead of a breadcrumb block

--- a/templates/registration/logged_out.html
+++ b/templates/registration/logged_out.html
@@ -1,10 +1,9 @@
 {% extends "base.html" %}
 
 
-{% block breadcrumb %}
-  <ol class="breadcrumb my-1">
-    <h1 class="breadcrumb-item active">Logged out</h1>
-  </ol>
+{% block panel %}
+    <h1>Logged out</h1>
+  <br>
 {% endblock %}
 
 {% block content %}
