Changed Sign in button for log in

--- a/templates/registration/logged_out.html
+++ b/templates/registration/logged_out.html
@@ -9,7 +9,7 @@
 {% block content %}
 <div class="text-center"> 
     <p>Click below to login again.</p>
-    <a class="btn btn-outline-primary" href="{% url 'login' %}">Sign in</a>
+    <a class="btn btn-outline-primary" href="{% url 'login' %}">Log in</a>
     <br>
     
 </div> 
