Changed Sing out button for log out

--- a/templates/base_banner.html
+++ b/templates/base_banner.html
@@ -17,6 +17,6 @@
         <a class="p-2 text-light" href="{% url 'term_list' %}">Terms</a>
         <a class="p-2 text-light" href="{% url 'note_list' %}">Notes</a>
     </nav>
-    <a class="btn btn-outline-primary" href="{% url 'logout' %}">Sign out</a>
+    <a class="btn btn-outline-primary" href="{% url 'logout' %}">Log out</a>
   </div>
 {% endblock %}
