--- a/templates/organization_id.html
+++ b/templates/organization_id.html
@@ -6,12 +6,14 @@
 {% endblock %}
 
 {% block breadcrumb %}
+<div class="container">
   <nav aria-label="breadcrumb">
     <ol class="breadcrumb">
       <li class="breadcrumb-item"><a href="{% url 'organization_list' %}">Organization</a></li>
       <li class="breadcrumb-item">{{ organization.name }}</li>
     </ol>
   </nav>
+</div>
 {% endblock %}
 
 {% block content %}
@@ -23,25 +25,25 @@
 <br>
 <br>
   <div class="row">
-      <div class="col-6">Name: {{ organization.name }}</div>
-      <div class="col-6">Shortname: {{ organization.shortname }}</div>
+      <div class="col-sm-6">Name: {{ organization.name }}</div>
+      <div class="col-sm-6">Shortname: {{ organization.shortname }}</div>
   </div>
   <div class="row">
-      <div class="col-6">Country: {{ organization.country.name }}</div>
-      <div class="col-6">Umbrella members: {{ organization.members }}</div>
+      <div class="col-sm-6">Country: {{ organization.country.name }}</div>
+      <div class="col-sm-6">Umbrella members: {{ organization.members }}</div>
   </div>
   <div class="row">
-    <div class="col-12">URL: {{ organization.domain }}</div>
+    <div class="col-sm-12">URL: {{ organization.domain }}</div>
   </div>
   <br>
   <div class="row">
-    <div class="col-6">
+    <div class="col-sm-6">
       <label class="col-sm-2 col-form-label">Is umbrella?</label>
     <div class="form-check">
       <input type="checkbox" class="form-check-input" id="organizationUmbrella" {% if organization.umbrella %}checked="checked"{% endif %}> 
     </div>
     </div>
-    <div class="col-6">
+    <div class="col-sm-6">
         <label class="col-sm-2 col-form-label">Registered vendor?</label>
       <div class="form-check">
         <input type="checkbox" class="form-check-input" id="organizationVendor" {% if organization.vendor_reg %}checked="checked"{% endif %}> 
@@ -51,7 +53,7 @@
   <br>
   <br>
   <div class="row">
-      <div class="col-12">Notes: {{ organization.notes.content_type.organization.content }}</div>
+      <div class="col-sm-12">Notes: {{ organization.notes.content_type.organization.content }}</div>
     </div>
 
 </div>
