Change of attribute in image location

--- a/templates/base.html
+++ b/templates/base.html
@@ -21,8 +21,8 @@
     <div class="container-fluid">
       <div class="jumbotron"> 
         <div class="row">
-            <div class="col-sm-6" align="right">
-            <img src="/static/carpentries-mdb-hex-white.png" height="150px">
+            <div class="col-sm-6">
+            <img align="right" src="/static/carpentries-mdb-hex-white.png" height="150px">
             </div>
             <div class="col-sm-6">
                 <br>
