Fix path to membership.css

--- a/templates/base.html
+++ b/templates/base.html
@@ -9,7 +9,7 @@
       <link href="{% static 'bootstrap/dist/css/bootstrap.min.css' %}" rel="stylesheet">
   
       <!-- Custom styles for this template -->
-      <link href="membership.css" rel="stylesheet">
+      <link href="/static/membership.css" rel="stylesheet">
       <link href="/static/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
   </head>  
 
