--- a/templates/term_id.html
+++ b/templates/term_id.html
@@ -17,8 +17,8 @@
 {% block content %}
 <div class="container">
     <div class="row float-right">
-        <div class="btn btn-outline-primary" href="#">Edit</div>
-        <div class="btn btn-outline-primary" href="#">Delete</div>
+        <a class="btn btn-outline-primary" href="{% url 'term_edit' term.id %}">Edit</a>
+        <a class="btn btn-outline-primary" href="#">Delete</a>
     </div>
     <br>
     <br>
