--- a/membership/static/membership.css
+++ b/membership/static/membership.css
@@ -23,3 +23,7 @@ html {
   .border-bottom { border-bottom: 1px solid #e5e5e5; }
   
   .box-shadow { box-shadow: 0 .25rem .75rem rgba(0, 0, 0, .05); }
+
+  .jumbotron {
+    padding: 10px;
+  }
