--- a/templates/organization_list.html
+++ b/templates/organization_list.html
@@ -9,58 +9,6 @@
 {% endblock %}
 
 {% block content %}
-<div class="container">
-    <div class="btn btn-outline-primary" href="#">Add new</div>
-    <br>
-    <br>
-    <table class="table">
-      <thead class="thead-dark">
-        <tr>
-          <th>Organization</th>
-          <th>Country</th>
-          <th style="text-align:center;">Umbrella</th>
-        </tr>
-      </thead>
-      <tbody>
-        <p>
-        {% for organization in organizations %}
-          <tr>
-            <td>
-              <a href="{% url 'organization_id' organization.id %}">{{ organization.name }}</a>
-            </td>
-            <td><a class="text-muted d-block">{{ organization.country.name }}</a></td>
-            <td style="text-align:center;">
-              <div class="form-check">
-                <input type="checkbox" class="form-check-input" id="organizationUmbrella" {% if organization.umbrella %}checked="checked"{% endif %}> 
-              </div>
-            </td>
-          </tr>
-        {% endfor %}
-        </p>
-      </tbody>
-    </table>
-
-    {% if organizations.has_other_pages %}
-    <ul class="pagination">
-      {% if organizations.has_previous %}
-        <li><a href="?page={{ organizations.previous_page_number }}">&laquo;</a></li>
-      {% else %}
-        <li class="disabled"><span>&laquo;</span></li>
-      {% endif %}
-      {% for i in organizations.paginator.page_range %}
-        {% if organizations.number == i %}
-          <li class="active"><span>{{ i }} <span class="sr-only">(current)</span></span></li>
-        {% else %}
-          <li><a href="?page={{ i }}">{{ i }}</a></li>
-        {% endif %}
-      {% endfor %}
-      {% if organizations.has_next %}
-        <li><a href="?page={{ organizations.next_page_number }}">&raquo;</a></li>
-      {% else %}
-        <li class="disabled"><span>&raquo;</span></li>
-      {% endif %}
-    </ul>
-  {% endif %}
-
-  </div>
+        {% load render_table from django_tables2 %}
+        {% render_table organizations %}
 {% endblock %}
