Account applitcation excluded

--- a/templates/organization_list.html
+++ b/templates/organization_list.html
@@ -9,6 +9,7 @@
 {% endblock %}
 
 {% block content %}
+  <div class="btn btn-outline-primary" href="#">Add new</div>
         {% load render_table from django_tables2 %}
         {% render_table organizations %}
 {% endblock %}
