--- a/templates/contact_id.html
+++ b/templates/contact_id.html
@@ -6,14 +6,14 @@
 {% endblock %}
 
 {% block breadcrumb %}
-  
+<div class="container">
   <nav aria-label="breadcrumb">
     <ol class="breadcrumb">
       <li class="breadcrumb-item"><a href="{% url 'contact_list' %}">Contact</a></li>
       <li class="breadcrumb-item">{{ contact.name }} {{ contact.last_name }}</li>
     </ol>
   </nav>
-
+</div> 
 {% endblock %}
 
 {% block content %}
